--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 
 <!--
     Author: Anthony Morelli
-    Project: MatchmakerWebLite
-
-    All rights reserved.
+    Project: Matchmaker
+    Credits: Eric Pogue and W3Schools HTML tutorials
 -->
 
     <head>
@@ -14,7 +13,7 @@
 </head>
 
 <body> 
-    <h1>Tony's Matchmaker</h1>
+    <h1>&#128525 Tony's Matchmaker &#128525</h1>
     <p>Instructions...</p>
 
     <!-- Reference for HTML "option" tabs/fields: https://www.w3schools.com/tags/tag_option.asp -->
