--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 <body> 
     <h1>&#128525 Tony's Matchmaker &#128525</h1>
-    <p>Instructions...</p>
+    <p>Instructions: Please answer the following questions below. By agreeing or disagreeing with <br>
+         the below statements, we can determine our compatibility and determine whether we should <br>
+          hang out or not!</p>
 
     <!-- Reference for HTML "option" tabs/fields: https://www.w3schools.com/tags/tag_option.asp -->
 
