--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <!--
     Author: Anthony Morelli
     Project: Matchmaker
-    Credits: Eric Pogue and W3Schools HTML tutorials
 -->
 
     <head>
@@ -74,7 +73,7 @@
     <p id="compatibility"></p>
 
  <script>
-console.log("Starting Matchmaker Lite...");
+console.log("Starting Matchmaker...");
 
 function CalculateCompatibility() {
         console.log("CalculateCompatibility()");
@@ -106,29 +105,29 @@ function CalculateCompatibility() {
         console.log("Question 2 Answers:");
         console.log(document.getElementById("q2").selectedOptions[0].text);
         console.log(document.getElementById("q2").selectedOptions[0].value);
-        console.log(question1Response);
+        console.log(question2Response);
 
         console.log("Question 3 Answers:");
         console.log(document.getElementById("q3").selectedOptions[0].text);
         console.log(document.getElementById("q3").selectedOptions[0].value);
-        console.log(question1Response);
+        console.log(question3Response);
 
         console.log("Question 4 Answers:")
         console.log(document.getElementById("q4").selectedOptions[0].text);
         console.log(document.getElementById("q4").selectedOptions[0].value);
-        console.log(question1Response);
+        console.log(question4Response);
 
         console.log("Question 5 Answers:")
         console.log(document.getElementById("q5").selectedOptions[0].text);
         console.log(document.getElementById("q5").selectedOptions[0].value);
-        console.log(question1Response);
+        console.log(question5Response);
 
          // Todo: Calculate compatibility scores.
         let question1Compatibility = 5 - Math.abs(question1Response - DESIRED_RESPONSE[0]);
         let question2Compatibility = 5 - Math.abs(question2Response - DESIRED_RESPONSE[1]);
         let question3Compatibility = 5 - Math.abs(question3Response - DESIRED_RESPONSE[2]);
-        let question4Compatibility = 5 - Math.abs(question3Response - DESIRED_RESPONSE[3]);
-        let question5Compatibility = 5 - Math.abs(question3Response - DESIRED_RESPONSE[4]);
+        let question4Compatibility = 5 - Math.abs(question4Response - DESIRED_RESPONSE[3]);
+        let question5Compatibility = 5 - Math.abs(question5Response - DESIRED_RESPONSE[4]);
 
 
         console.log(question1Compatibility);
